src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_39_2.deca
// Description:
//    regle 3.39, condition
//
// Resultats:
//    Ligne 17: Undeclared identifier : 'x'.


class C{

}

class B extends C{

}

{
    C b = (B) (x);
}